--- a/module1/11_Ham/Bai_tap/BaiTap_SuDungHam1/BaiTap_SuDungHam1.html
+++ b/module1/11_Ham/Bai_tap/BaiTap_SuDungHam1/BaiTap_SuDungHam1.html
@@ -6,10 +6,11 @@
 </head>
 <body>
 <script>
-    let i = 3;
-    while (i < 6) {
-        console.log(i);
-        i += 1;
+    let number = parseInt(prompt("Nhập số"));
+    checkNumber();
+    function checkNumber() {
+     alert(number +1);
+     alert(number);
     }
 </script>
 </body>
