--- a/module1/11_Ham/Bai_tap/UngDungQuanLySanPhamCuaHam.html
+++ b/module1/11_Ham/Bai_tap/UngDungQuanLySanPhamCuaHam.html
@@ -5,28 +5,41 @@
     <title>Title</title>
 </head>
 <body>
-<table>
-    <tr>
-        <th>ADD NEW PRODUCT</th>
-        <th></th>
-        <th></th>
-    </tr>
-    <tr>
-        <td><input type="text" placeholder="New Product" id="product"></td>
-        <td><button onclick="add()">ADD</button></td>
-        <td></td>
-    </tr>
-    <tr>
-        <th>DISPLAY ALL PRODUCT</th>
-        <th></th>
-        <th></th>
-    </tr>
-    <tr>
-        <th>Product name</th>
-        <th></th>
-        <th></th>
-    </tr>
-
-</table>
+<script>
+    let arrayProduct =["Sony","Nokia","SamSung","Iphone"];
+    function displayProduct(arrayProduct) {
+        document.body.innerHTML ="";
+        let temp="<input type='text' id='addNewProduct'><input type='button' value='Add' onclick='addNewProduct()'></br>";
+        temp+="<table>";
+        for(let i=0;i<arrayProduct.length;i++) {
+            temp+="<tr><td>"+arrayProduct[i]+"</td>" +
+                "<td><input type='button' value='Edit' onclick='viewFormEditProduct("+i+")'></td>" +
+                "<td><input type='button' value='Delete' onclick='deleteProduct("+i+") '></td>" +
+                "</tr>"
+        }
+        temp+="</table>";
+        document.write(temp);
+    }
+    function addNewProduct() {
+        arrayProduct.push(document.getElementById("addNewProduct").value);
+        displayProduct(arrayProduct);
+    }
+    function viewFormEditProduct(index) {
+        displayProduct(arrayProduct);
+        let temp = "<input id='editProduct' type='text' value='"+arrayProduct[index]+"'><input type='button' value='Submit' onclick='editProduct("+index+")'>";
+        document.write(temp);
+    }
+    function editProduct(index) {
+        arrayProduct[index] = document.getElementById("editProduct").value;
+        displayProduct(arrayProduct)
+    }
+    function deleteProduct(index) {
+        if(confirm("Bạn có muốn xóa đt "+arrayProduct[index]+" này không?")) {
+            arrayProduct.splice(index,1);
+        }
+        displayProduct(arrayProduct);
+    }
+    displayProduct(arrayProduct)
+</script>
 </body>
 </html>
