--- a/module1/CaseStudy/Yeu_cau_4/Yeu_cau_4.html
+++ b/module1/CaseStudy/Yeu_cau_4/Yeu_cau_4.html
@@ -45,7 +45,7 @@
 
     function deleteCustomer() {
         let check= false;
-        let name = prompt("Nhập khách hàng muốn khóa");
+        let name = prompt("Nhập khách hàng muốn xóa");
         for (let i=0; i<listCustomer.length; i++){
             if (listCustomer[i]===name){
                 listCustomer.splice(i,1);
