--- a/module1/GiaiThuat/1.html
+++ b/module1/GiaiThuat/1.html
@@ -5,6 +5,8 @@
     <title>Title</title>
 </head>
 <body>
+<strong><i><u>CodeGym Career</u></i></strong>
+<input type="range" name="score" id="score" value="50" min="0" max="100" style="color: #ff3fdb">
 <script>
     let n=5;
     for (i=1;i<n;i++){
