--- a/module1/HackerRank/HackerRank/bai3.S.html
+++ b/module1/HackerRank/HackerRank/bai3.S.html
@@ -8,7 +8,7 @@
 <h1>3.	Viết chương trình tính :
     S=1+1/2+1/3+....+1/n</h1>
 <script>
-    let n = parseInt(prompt("Nhập vào số N muốn tính đến :"))
+    let n = parseInt(prompt("Nhập vào số N muốn tính đến :"));
     let sum =0;
     for (i = 1 ; i <= n ; i++)
     {
