--- a/module1/9_Cau_Truc_Lap/Bai_Tap/BaiTap_LuyenTapVongLap1.html
+++ b/module1/9_Cau_Truc_Lap/Bai_Tap/BaiTap_LuyenTapVongLap1.html
@@ -22,26 +22,30 @@
   //     break;
   //     temp ++;
   // }
-  //   let i;
-  //   let fib = [];
-  //
-  //   fib[0] = 0;
-  //   fib[1] = 1;
-  //   for (i = 2; i <= 10; i++) {
-  //       fib[i] = fib[i - 2] + fib[i - 1];
-  //       document.write(fib[i]+ "</br>");
-  //   }
-      let i;
-      let fib = [];
+    let i;
+    let fib = [];
 
-      fib[0] = 0;
-      fib[1] = 1;
-      for (i = 2; i <= 5; i++) {
-          fib[i] = fib[i - 2] + fib[i - 1];
-          if (fib[i] % 5 === 0) {
-              document.write(fib[i] + "</br>");
-          }
-      }
+    fib[0] = 0;
+    fib[1] = 1;
+    let result=0;
+    for (i = 2; i <= 10; i++) {
+        fib[i] = fib[i - 2] + fib[i - 1];
+        result +=fib[i];
+        document.write(fib[i]+ "</br>");
+        console.log(result)
+
+    }
+  //     let i;
+  //     let fib = [];
+  //
+  //     fib[0] = 0;
+  //     fib[1] = 1;
+  //     for (i = 2; i <= 5; i++) {
+  //         fib[i] = fib[i - 2] + fib[i - 1];
+  //         if (fib[i] % 5 === 0) {
+  //             document.write(fib[i] + "</br>");
+  //         }
+  //     }
 </script>
 </body>
 </html>
