--- a/module1/9_Cau_Truc_Lap/Bai_Tap/BaiTap_SoNguyenTo.html
+++ b/module1/9_Cau_Truc_Lap/Bai_Tap/BaiTap_SoNguyenTo.html
@@ -6,28 +6,48 @@
 </head>
 <body>
 <script>
-    let n = parseInt(prompt('Enter the number'));
-    let flag = true;
-
-    if (n < 2){
-        flag = false;
-    }
-    else{
-        for (let i = 2; i <= n-1; i++)
-        {
-            if (n % i == 0){
-                flag = false;
-                break;
+    // let n = parseInt(prompt('Enter the number'));
+    // let flag = true;
+    //
+    // if (n < 2){
+    //     flag = false;
+    // }
+    // else{
+    //     for (let i = 2; i <= n-1; i++)
+    //     {
+    //         if (n % i === 0){
+    //             flag = false;
+    //             break;
+    //         }
+    //     }
+    // }
+    //
+    // if (flag){
+    //     alert(n + " là số nguyên tố ");
+    // }
+    // else{
+    //     alert(n + " không phải là số nguyên tố ");
+    // }
+    let number = prompt('Nhập số lượng số nguyên tố đầu tiên');
+    let count = 0;
+    let n = 2; //Số nguyên tố
+    let i = 2;
+    let num = "";
+    while (count < number) {
+        while (i <= (n - 1)) {
+            if (n % i != 0) {
+                i++;
+            } else {
+                n++;
+                i = 2;
             }
         }
+        num = num + ' ' + n;
+        n++;
+        count++;
+        i = 2;
     }
-
-    if (flag){
-        alert(n + " là số nguyên tố ");
-    }
-    else{
-        alert(n + " không phải là số nguyên tố ");
-    }
+    alert("Các số nguyên tố là:" + num);
 
 </script>
 </body>
