--- a/module1/CaseStudy/nhap.html
+++ b/module1/CaseStudy/nhap.html
@@ -5,9 +5,12 @@
 </head>
 <body>
 <script>
-    if (NaN === NaN){
-        alert("acbbasdasd")
+    let x = 1, i;
+    for (i = 0; i < 3; i = i + 2) {
+        x = x + 1;
     }
+    console.log(x);
+    console.log(i);
 </script>
 </body>
 
