--- a/module1/HackerRank/HackerRank/bai8..html
+++ b/module1/HackerRank/HackerRank/bai8..html
@@ -7,8 +7,8 @@
 <body>
 <h1>8.	Nhập 2 số nguyên dương a và b. Sau đó in ra ước chung lớn nhất và bội chung nhỏ nhất của 2 số nguyên dương a và b đó.</h1>
 <script>
-    let a = parseInt(prompt("Nhập số a :"))
-    let b = parseInt(prompt("Nhập số b :"))
+    let a = parseInt(prompt("Nhập số a :"));
+    let b = parseInt(prompt("Nhập số b :"));
 
     function uoc(a, b) {
         while (a * b != 0) {
@@ -24,7 +24,7 @@
         return a+b;
     }
     function boi(a,b) {
-        c = Math.abs(a*b)
+       let c = Math.abs(a*b);
         return c/uoc(a,b)
     }
     let uoc1 = uoc(a,b);
