--- a/module1/HackerRank/HackerRank/bai4.S!.html
+++ b/module1/HackerRank/HackerRank/bai4.S!.html
@@ -8,7 +8,7 @@
 <h1>5.	Viết chương trình tính : S=15-1+1/2-1/3!+....+(-1)n  1/n!</h1>
 <p id="result"></p>
 <script>
-    let n = parseInt(prompt("Nhập vào số N muốn tính đến :"))
+    let n = parseInt(prompt("Nhập vào số N muốn tính đến :"));
     sum = 15;
     function igiaithua(x) {
         let giaithua = 1;
