--- a/module1/12. OOP/ThucHanh_XayDungLopHinhTron.html
+++ b/module1/12. OOP/ThucHanh_XayDungLopHinhTron.html
@@ -28,7 +28,7 @@
     alert(circle.getRadius());
     alert(circle.getColor());
     let c  = document.getElementById("hinhtron");
-    let ctx = c.getContext("2d")
+    let ctx = c.getContext("2d");
     ctx.beginPath();
     ctx.arc(50,150,circle.radius,0,2*Math.PI);
     ctx.stroke()
