--- a/module1/9_Cau_Truc_Lap/Bai_Tap/BaiTap_LuyenTapVongLap2.html
+++ b/module1/9_Cau_Truc_Lap/Bai_Tap/BaiTap_LuyenTapVongLap2.html
@@ -6,20 +6,20 @@
 </head>
 <body>
 <script>
-    // let n = 5;
-    // for (i=0; i < n ;i++){
-    //     for (j=0;j<=i;j++){
-    //         document.write("*");
-    //     }
-    //     document.write("</br>")
-    // }
     let n = 5;
     for (i=0; i < n ;i++){
-        for (j=0;j<n-i;j++){
+        for (j=0;j<=i;j++){
             document.write("*");
         }
         document.write("</br>")
     }
+    // let n = 5;
+    // for (i=0; i < n ;i++){
+    //     for (j=0;j<n-i;j++){
+    //         document.write("*");
+    //     }
+    //     document.write("</br>")
+    // }
 </script>
 </body>
 </html>
