--- a/module1/10_Mang/ThucHanh/ThucHanh_TimGiaTriLonNhatTrongMang.html
+++ b/module1/10_Mang/ThucHanh/ThucHanh_TimGiaTriLonNhatTrongMang.html
@@ -10,7 +10,7 @@
     let max = numbers[0];
     let index = 0;
     for (let i = 1; i < numbers.length; i++) {
-        if (numbers[i] > max) {
+        if (max < numbers[i]) {
             max = numbers[i];
             index = i;
         }
