--- a/module1/CaseStudy/nhap.html
+++ b/module1/CaseStudy/nhap.html
@@ -5,17 +5,11 @@
 </head>
 <body>
 <script>
-    let c = document.getElementById("myCanvas");
-    let ctx = c.getContext("2d");
-
-    // Create gradient
-    let grd = ctx.createRadialGradient(75,50,5,90,60,100);
-    grd.addColorStop(0,"red");
-    grd.addColorStop(1,"white");
-
-    // Fill with gradient
-    ctx.fillStyle = grd;
-    ctx.fillRect(10,10,150,80);
+   for (let  i =1 ; i <=5 ; i++ ){
+       console.log(a)
+   }if (i===3){
+       continue
+   }
 </script>
 </body>
 
