--- a/module1/thi/1.html
+++ b/module1/thi/1.html
@@ -2,9 +2,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
 </head>
 <body>
-$END$
+<script>
+    let n = parseInt(prompt("nhập số phần tử N"));
+    let a = new Array(n);
+    for (let i = 0; i < n; i++) {
+        a[i] = parseInt(prompt("thêm phần tử vào mảng"));
+    }
+
+    function findMax(a) {
+        let max = a[0];
+        for (let j = 0; j < a.length; j++) {
+            if (max < a[j]) {
+                max = a[j];
+            }
+        }
+        alert("số lớn nhất là " + max);
+    }
+
+    findMax(a)
+</script>
 </body>
 </html>
