--- a/module1/thi/2.html
+++ b/module1/thi/2.html
@@ -2,9 +2,28 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
 </head>
 <body>
-$END$
+<script>
+    let n = parseInt(prompt("nhập số phần tử N"));
+
+    while (isNaN(n)){
+        n =parseInt(prompt("nhập lại N là số"));
+    }
+    let a = new Array(n);
+    for (let i =0; i<n ; i++ ){
+        a[i] = parseInt(prompt("thêm phần tử vào mảng"));
+    }
+    let x = parseInt(prompt("nhập vào số X"));
+    function tryRemoveFromArray(array,x) {
+        for (let j = 0; j < a.length ; j++){
+            if (array[j] === x){
+                array.splice(j,1);
+            }
+        }console.log(array);
+    }
+    tryRemoveFromArray(a,x)
+</script>
 </body>
 </html>
